Fix sidebar menu icons jumping horizontally during collapse/expand animation by maintaining fixed icon width

--- a/kurban2026.css
+++ b/kurban2026.css
@@ -1796,10 +1796,6 @@ body {
   flex-shrink: 0;
 }
 
-.sidebar.collapsed .sidebar-menu li a i {
-  width: auto;
-}
-
 .sidebar-menu li a span {
   margin-left: 5px;
   font-weight: 600;
